--- a/WebBookTracker/web/index.html
+++ b/WebBookTracker/web/index.html
@@ -100,6 +100,16 @@
 <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+
+<script type="text/javascript">
+// Allows network images to be shown
+    let useHtml = true;
+    if(useHtml) {
+      window.flutterWebRenderer = "html";
+    } else {
+      window.flutterWebRenderer = "canvaskit";
+    }
+    </script>
   <script>
   // Your web app's Firebase configuration
   const firebaseConfig = {
@@ -110,6 +120,7 @@
     messagingSenderId: "417875875601",
     appId: "1:417875875601:web:03f2bbe3a78dc0b14f1eb0"
   };
+
 
   firebase.initializeApp(firebaseConfig);
   </script>
